#import "AnnotationViewExample.h"
@import Mapbox;

NSString *const MBXExampleAnnotationView = @"AnnotationViewExample";

// MGLAnnotationView subclass
@interface CustomAnnotationView : MGLAnnotationView
@end

@implementation CustomAnnotationView
...
