...
@property (nonatomic) MGLMapView *mapView;
@property (nonatomic) MGLLight *light;
@property (nonatomic) UISlider *slider;

@end

NSString *const MBXExampleBuildingLight = @"BuildingLightExample";

@implementation BuildingLightExample

- (void)viewDidLoad {
    [super viewDidLoad];
    
...
