...

        let titleLabel = UILabel()
        titleLabel.translatesAutoresizingMaskIntoConstraints = false

        let titleFont = UIFont.systemFont(ofSize: 34.0, weight: .medium)
        titleLabel.font = titleFont
        titleLabel.text = "Examples" // TODO - Localize titleLabel text

        view.addSubview(containerView)
        headerView.addSubview(logoImageView)
        containerView.addSubview(headerView)
        containerView.addSubview(titleLabel)

...
